force-app/main/default/objects/Material_Change__c/Material_Change__c.object-meta.xml
<CustomObject>
    <label>Material Change</label>
    <nameField>
        <displayFormat>MC-{00000}</displayFormat>
        <label>Material Change Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>