force-app/main/default/objects/Material_Change__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Possible change types</description>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CHANGE_TYPE_UNSPECIFIED</fullName>
                <label>Unspecified</label>
            </value>
            <value>
                <fullName>CHANGE_TYPE_EXTENDED_UNPAID_LEAVE</fullName>
                <label>Unpaid Leave</label>
            </value>
            <value>
                <fullName>CHANGE_TYPE_REDUCED_INCOME</fullName>
                <label>Reduced Income</label>
            </value>
            <value>
                <fullName>CHANGE_TYPE_LOSS_OF_EMPLOYMENT</fullName>
                <label>Loss of Employment</label>
            </value>
            <value>
                <fullName>CHANGE_TYPE_LARGE_EXPENSE</fullName>
                <label>Large Expense</label>
            </value>
            <value>
                <fullName>CHANGE_TYPE_MEDICAL_TREATMENT</fullName>
                <label>Medical Treatment</label>
            </value>
            <value>
                <fullName>CHANGE_TYPE_OTHER</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>CHANGE_TYPE_RETIREMENT</fullName>
                <label>Retirement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>