force-app/main/default/objects/Material_Change__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Associated Application.</description>
    <label>Loan Application</label>
    <referenceTo>ResidentialLoanApplication</referenceTo>
    <relationshipLabel>Material Changes</relationshipLabel>
    <relationshipName>Material_Changes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>